Fix spacing with variation swatches

--- a/src/postcss/woocommerce/single-product.css
+++ b/src/postcss/woocommerce/single-product.css
@@ -82,8 +82,6 @@ body.single-product {
 }
 
 .single-product-top {
-  margin-top: 2em;
-
   & .flex-active-slide {
     padding-bottom: 10px;
     text-align: center;
@@ -465,7 +463,7 @@ body.single-product {
   margin: 1em 0;
 
   & .variations {
-    margin: 1em 0;
+    margin: 0;
   }
 
   & .value {
