--- a/src/postcss/woocommerce/woo-variation-swatches.css
+++ b/src/postcss/woocommerce/woo-variation-swatches.css
@@ -1,7 +1,5 @@
 body.woo-variation-swatches {
   & .variations_form .variations {
-    margin-bottom: 1em;
-
     & .label label {
       opacity: 0.75;
     }
